--- a/paper/src/modeling-2.tex
+++ b/paper/src/modeling-2.tex
@@ -1,6 +1,6 @@
 \section{Modeling of The Cloud-based Burst Buffers}
 \label{sec:modeling}
-\subsection{Modeling of I/O throughput}
+\subsection{Modeling of I/O Throughput}
 In practice, when we use the cloud-based burst buffers in real environments,
 these burst buffers are shared, and accessed by multiple compute nodes.
 Therefore, the I/O throughput can be degraded by other compute nodes.
