--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -97,11 +97,11 @@ accelerate I/O performance for data intensive applications.
 % shared storage
 %in cloud computing through experimental and simulation evaluation.
 To explore the effectiveness of cloud-based burst buffers, 
-We implement a prototype, and evaluate the system in Amazon
+we implement a prototype, and evaluate the system in Amazon
 EC2/S3.
 The experimental and simulation evaluations show that our prototype system
-can achieve up to 2.5 times improvement in the execution time of real
-applications.
+can achieve up to 2.9 times improvement in the execution time of real
+applications while reducing the monetary cost by 50\%.
 \end{abstract}
 
 %start key word
