--- a/paper/src/introduction.tex
+++ b/paper/src/introduction.tex
@@ -88,9 +88,8 @@ system to estimate execution time of data intensive applications.
 Our experimental results using Amazon EC2 shows that we achieve 3 times of
 improvement in read throughput, and 4 times in write throughput with 8 nodes of
 burst buffers. Our simulation based on the model shows that we can
-improve execution time of real data intensive applications by 2.5 times in
-execution time. To the best our knowledge, this work is the first explorations
-of innovating burst buffer technologies to clouds, and delivering quantitative
+improve performance of real data intensive applications by 2.9 times while reducing the monetary cost by 50\%.
+To the best our knowledge, this work is the first explorations of innovating burst buffer technologies to clouds, and delivering quantitative
 evaluations.
 \par
 
