--- a/paper/src/ref/reference.bib
+++ b/paper/src/ref/reference.bib
@@ -1,3 +1,11 @@
+@webpage{S3FS,
+	title = "S3FS",
+	organization ="",
+	url = "https://code.google.com/p/s3fs",
+	refdate = "",
+}
+
+
 @webpage{IOR,
 	author = "rklundt",
 	title = "IOR HPC Benchmark",
