--- a/paper/src/conclusion.tex
+++ b/paper/src/conclusion.tex
@@ -8,12 +8,11 @@ EC2/S3 public cloud.
 The experimental results show that we can achieve an up to 3 times speed up for
 read, and 4 times speed up for write.
 We have also conducted simulations targeting three real data
-intensive applications, and achieved 2.5 times speed up in the execution time
+intensive applications, and achieved 2.9 times speed up in the execution time
 of a real application, Montage, which has high temporal I/O locality and I/O
-time.
+time while reducing the monetary cost by 50\%.
 
 As future work, we will extend the system to be able to dynamically change the
 number of burst buffer nodes depending on the I/O workloads to achieve high I/O
 throughput while minimizing the costs.
-
 
