Removed -DRAFT for the finali IM submission

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -139,7 +139,7 @@ applications while reducing the monetary cost by 50\%.
 \section*{Acknowledgement}
 This work was performed under the auspices of the U.S. Department of Energy by
 Lawrence Livermore National Laboratory under Contract DE-AC52-07NA27344.
-(LLNL-CONF-663584-DRAFT).
+(LLNL-CONF-663584).
 This research was supported by JST, CREST (Research Area: Advanced Core Technologies for
 Big Data Integration).
 This research made use of Montage, funded by the National Aeronautics and Space Administration's
